# Open-Sonic-1-Recreation

./: .gitignore  CMakeLists.txt  README.md
include/: AnimMgr.h  Audio.h  AudioMappings.h  Bg.h  Camera.h  EnemiesGHZ.h  Enemy.h  GameMath.h  GameSettings.h  Geometry.h  GimmicksGHZ.h  LayerSwitcher.h  Level.h  LevelInformer.h  Monitor.h  Ring.h  Sfx.h  Terrain.h  TitleScreen.h
src/: AnimMgr.cpp  AnimMgr.h  Bg.cpp  Bg.h  Camera.cpp  Camera.h  Entity.cpp  FramesMappings.h  Game.cpp  Game.h  GameMath.cpp  GameMath.h  InputMgr.h  Level.cpp  Level.h  LevelInformer.h  Player.cpp  Player.h  Ring.cpp  Terrain.cpp  Terrain.h  TitleScreen.h  entity-creator.cpp  entity-creator.hpp  entity-placement.hpp  entity-pool.cpp  entity-pool.hpp  game-loop-ticker.h  hex-angle.hpp  level-loader.cpp  level-loader.hpp  main.cpp  makeunique.hpp  new-terrain.hpp  player-collider.hpp  player-mover.hpp  player-sensor.hpp  player-state-base.hpp  player-state-jump.hpp  player-state-machine.hpp  (+10 more)
src/core/: Artist.h  ArtistStructs.h  Audio.h  DeprecatedGameEnv.h  GameEnvironment.h  GameMath.cpp  Geometry.h  IStorableResource.h  InputMgr.h  ResourceStore.cpp  ResourceStore.h  Scene.h  SceneDirector.h  Screen.cpp  Screen.h  SfmlArtist.cpp  SfmlArtist.h  SfmlGameEnvironment.h  SfmlTextureLoader.cpp  SfmlTextureLoader.h  SfmlTextureStore.cpp  SfmlTextureStore.h  SpriteFont.cpp  SpriteFont.h  TextureStore.h  _index.hpp
src/core/game_enviroment/: EntityContext.h  EntityPool.cpp  EntityPool.h  EntityPoolEventLoop.h  GameEnvironment.h  ISceneDirector.h  InputMgr.h  ResourceStore.h  Scene.h  SceneContext.h  SceneDirector.cpp  SceneDirector.h
src/core/game_enviroment/artist/: Animator.h  Artist.h  ArtistStructs.h  SpriteFont.cpp  SpriteFont.h  TextureLoader.h
src/core/game_enviroment/dj/: AudioLoader.h  Dj.cpp  Dj.h  DjResources.h
src/entities/: EnemiesGHZ.cpp  Entity.cpp  Entity.h  EntityContext.h  EntityV3.h  GimmicksGHZ.cpp  Player.cpp  Player.h  Sfx.cpp  Spikes.h  Spring.cpp  Spring.h  TitleMenuEntity.cpp  TitleMenuEntity.h  _index.hpp  entity-interfaces.hpp  entity-types.hpp  object-ids-s1.hpp
src/entities/general/: Enemy.h  LayerSwitcher.h  Monitor.h  Ring.cpp  Ring.h  Sfx.cpp  Sfx.h  Spikes.h  Spring.cpp  Spring.h  _index.hpp
src/entities/sonic-1/: _index.hpp  object-ids-s1.hpp
src/entities/sonic-1/enemies/: EnemiesGHZ.cpp  EnemiesGHZ.h  _index.hpp  bullet.cpp  buzz-bomber.cpp  chopper.cpp  crabmeat.cpp  motobug.cpp
src/entities/sonic-1/ghz/: GimmicksGHZ.cpp  GimmicksGHZ.h  _index.hpp
src/scenes/: GameScene.cpp  GameScene.h  TitleScreenScene.cpp  TitleScreenScene.h
src/sfml_game_environment/: SfmlArtist.cpp  SfmlArtist.h  SfmlAudioLoader.cpp  SfmlAudioLoader.h  SfmlDj.cpp  SfmlDj.h  SfmlGameEnviroment.cpp  SfmlGameEnvironment.h  SfmlTextureLoader.cpp  SfmlTextureLoader.h
src/sonic/: SonicResources.h
